CJMS-Interfaces/AudienceDisplay/src/assets/stylesheets/InfiniteTable.scss
body{
  font-family: Helvetica;
  -webkit-font-smoothing: antialiased;
  background: rgba( 71, 147, 227, 1);
  overflow: hidden;
}

/* Table Styles */
.table-wrapper{
  height: 100%;
  margin: 10px 4% 4%;
  box-shadow: 0px 35px 50px rgba( 0, 0, 0, 0.2 );
}

.fl-table {
  border-radius: 5px;
  font-size: 3vw;
  font-weight: normal;
  border: none;
  border-collapse: collapse;
  width: 100%;
  max-width: 100%;
  white-space: nowrap;
  background-color: white;
  // overflow: hidden;
}

.fl-table td, .fl-table th {
  text-align: center;
  padding: 8px;
  overflow: hidden;
}

.fl-table tbody {
  overflow: hidden;
}

.fl-table td {
  border-right: 1px solid #f8f8f8;
  font-size: 2vw;
  overflow: hidden;
}

.fl-table thead tr th {
  color: #ffffff;
  background: #4FC3A1;
  position: sticky;

  top: 0%;
  z-index: 1;
  overflow: hidden;
}


.fl-table thead th:nth-child(odd) {
  color: #ffffff;
  background: #324960;
  overflow: hidden;
}

.fl-table tr:nth-child(even) {
  background: #F8F8F8;
}

